source_3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> operation
Rule 6     statement -> print
Rule 7     statement -> modification
Rule 8     statement -> iF
Rule 9     statement -> whilE
Rule 10    statement -> for
Rule 11    statement -> break
Rule 12    statement -> return
Rule 13    statement -> function
Rule 14    statement -> runfunction
Rule 15    statement -> class
Rule 16    statement -> runclass
Rule 17    statement -> runclassfunction
Rule 18    break -> BREAK statements
Rule 19    break -> BREAK
Rule 20    return -> RETURN
Rule 21    for -> FOR ( operation ; condition ; operation ) { statements }
Rule 22    condition -> VARIABLE > VARIABLE
Rule 23    condition -> VARIABLE < VARIABLE
Rule 24    condition -> VARIABLE > NUMBER
Rule 25    condition -> VARIABLE < NUMBER
Rule 26    condition -> VARIABLE < = VARIABLE
Rule 27    condition -> VARIABLE > = VARIABLE
Rule 28    condition -> VARIABLE [ factor ] > VARIABLE
Rule 29    condition -> VARIABLE [ factor ] < VARIABLE
Rule 30    condition -> VARIABLE < VARIABLE AND VARIABLE [ factor ] > VARIABLE
Rule 31    condition -> VARIABLE < VARIABLE AND VARIABLE [ factor ] < = VARIABLE
Rule 32    iF -> IF ( condition ) { statements }
Rule 33    iF -> IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
Rule 34    whilE -> WHILE ( condition ) { statements }
Rule 35    assignment -> VARIABLE = NUMBER
Rule 36    assignment -> VARIABLE = [ sentence ]
Rule 37    assignment -> SELF . VARIABLE = VARIABLE
Rule 38    modification -> VARIABLE [ factor ] = VARIABLE [ factor ]
Rule 39    modification -> VARIABLE [ factor ] = VARIABLE
Rule 40    modification -> SELF . VARIABLE = SELF . VARIABLE + VARIABLE
Rule 41    operation -> VARIABLE = expression
Rule 42    operation -> VARIABLE + +
Rule 43    operation -> VARIABLE - -
Rule 44    expression -> expression + term
Rule 45    expression -> expression - term
Rule 46    expression -> term
Rule 47    expression -> VARIABLE [ factor ]
Rule 48    expression -> LEN ( term )
Rule 49    term -> term * factor
Rule 50    term -> term / factor
Rule 51    term -> term / / factor
Rule 52    term -> factor
Rule 53    factor -> VARIABLE
Rule 54    factor -> ( expression )
Rule 55    factor -> NUMBER
Rule 56    print -> PRINT ( sentence )
Rule 57    sentence -> word , sentence
Rule 58    sentence -> word
Rule 59    word -> NUMBER
Rule 60    word -> VARIABLE
Rule 61    function -> DEF VARIABLE ( sentence ) { statements }
Rule 62    function -> DEF VARIABLE ( SELF , sentence ) { statements }
Rule 63    function -> DEF VARIABLE ( SELF ) { statements }
Rule 64    runfunction -> VARIABLE ( sentence )
Rule 65    class -> CLASS VARIABLE { init statements }
Rule 66    init -> DEF INIT ( SELF , VARIABLE , VARIABLE , VARIABLE ) { statements }
Rule 67    runclass -> VARIABLE = VARIABLE ( STR , NUMBER , NUMBER )
Rule 68    runclassfunction -> VARIABLE . VARIABLE ( NUMBER )
Rule 69    runclassfunction -> VARIABLE . VARIABLE ( )

Terminals, with rules where they appear

(                    : 21 32 33 33 34 48 54 56 61 62 63 64 66 67 68 69
)                    : 21 32 33 33 34 48 54 56 61 62 63 64 66 67 68 69
*                    : 49
+                    : 40 42 42 44
,                    : 57 62 66 66 66 67 67
-                    : 43 43 45
.                    : 37 40 40 68 69
/                    : 50 51 51
;                    : 21 21
<                    : 23 25 26 29 30 31 31
=                    : 26 27 31 35 36 37 38 39 40 41 67
>                    : 22 24 27 28 30
AND                  : 30 31
BREAK                : 18 19
CLASS                : 65
DEF                  : 61 62 63 66
ELIF                 : 33
ELSE                 : 33
FOR                  : 21
IF                   : 32 33
INIT                 : 66
LEN                  : 48
NUMBER               : 24 25 35 55 59 67 67 68
PRINT                : 56
RETURN               : 20
SELF                 : 37 40 40 62 63 66
STR                  : 67
VARIABLE             : 22 22 23 23 24 25 26 26 27 27 28 28 29 29 30 30 30 30 31 31 31 31 35 36 37 37 38 38 39 39 40 40 40 41 42 43 47 53 60 61 62 63 64 65 66 66 66 67 67 68 68 69 69
WHILE                : 34
[                    : 28 29 30 31 36 38 38 39 47
]                    : 28 29 30 31 36 38 38 39 47
error                : 
{                    : 21 32 33 33 33 34 61 62 63 65 66
}                    : 21 32 33 33 33 34 61 62 63 65 66

Nonterminals, with rules where they appear

assignment           : 4
break                : 11
class                : 15
condition            : 21 32 33 33 34
expression           : 41 44 45 54
factor               : 28 29 30 31 38 38 39 47 49 50 51 52
for                  : 10
function             : 13
iF                   : 8
init                 : 65
modification         : 7
operation            : 5 21 21
print                : 6
program              : 0
return               : 12
runclass             : 16
runclassfunction     : 17
runfunction          : 14
sentence             : 36 56 57 61 62 64
statement            : 2 3
statements           : 1 2 18 21 32 33 33 33 34 61 62 63 65 66
term                 : 44 45 46 48 49 50 51
whilE                : 9
word                 : 57 58

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (12) statement -> . return
    (13) statement -> . function
    (14) statement -> . runfunction
    (15) statement -> . class
    (16) statement -> . runclass
    (17) statement -> . runclassfunction
    (35) assignment -> . VARIABLE = NUMBER
    (36) assignment -> . VARIABLE = [ sentence ]
    (37) assignment -> . SELF . VARIABLE = VARIABLE
    (41) operation -> . VARIABLE = expression
    (42) operation -> . VARIABLE + +
    (43) operation -> . VARIABLE - -
    (56) print -> . PRINT ( sentence )
    (38) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (39) modification -> . VARIABLE [ factor ] = VARIABLE
    (40) modification -> . SELF . VARIABLE = SELF . VARIABLE + VARIABLE
    (32) iF -> . IF ( condition ) { statements }
    (33) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (34) whilE -> . WHILE ( condition ) { statements }
    (21) for -> . FOR ( operation ; condition ; operation ) { statements }
    (18) break -> . BREAK statements
    (19) break -> . BREAK
    (20) return -> . RETURN
    (61) function -> . DEF VARIABLE ( sentence ) { statements }
    (62) function -> . DEF VARIABLE ( SELF , sentence ) { statements }
    (63) function -> . DEF VARIABLE ( SELF ) { statements }
    (64) runfunction -> . VARIABLE ( sentence )
    (65) class -> . CLASS VARIABLE { init statements }
    (67) runclass -> . VARIABLE = VARIABLE ( STR , NUMBER , NUMBER )
    (68) runclassfunction -> . VARIABLE . VARIABLE ( NUMBER )
    (69) runclassfunction -> . VARIABLE . VARIABLE ( )

    VARIABLE        shift and go to state 18
    SELF            shift and go to state 19
    PRINT           shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    BREAK           shift and go to state 24
    RETURN          shift and go to state 25
    DEF             shift and go to state 26
    CLASS           shift and go to state 27

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11
    return                         shift and go to state 12
    function                       shift and go to state 13
    runfunction                    shift and go to state 14
    class                          shift and go to state 15
    runclass                       shift and go to state 16
    runclassfunction               shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (12) statement -> . return
    (13) statement -> . function
    (14) statement -> . runfunction
    (15) statement -> . class
    (16) statement -> . runclass
    (17) statement -> . runclassfunction
    (35) assignment -> . VARIABLE = NUMBER
    (36) assignment -> . VARIABLE = [ sentence ]
    (37) assignment -> . SELF . VARIABLE = VARIABLE
    (41) operation -> . VARIABLE = expression
    (42) operation -> . VARIABLE + +
    (43) operation -> . VARIABLE - -
    (56) print -> . PRINT ( sentence )
    (38) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (39) modification -> . VARIABLE [ factor ] = VARIABLE
    (40) modification -> . SELF . VARIABLE = SELF . VARIABLE + VARIABLE
    (32) iF -> . IF ( condition ) { statements }
    (33) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (34) whilE -> . WHILE ( condition ) { statements }
    (21) for -> . FOR ( operation ; condition ; operation ) { statements }
    (18) break -> . BREAK statements
    (19) break -> . BREAK
    (20) return -> . RETURN
    (61) function -> . DEF VARIABLE ( sentence ) { statements }
    (62) function -> . DEF VARIABLE ( SELF , sentence ) { statements }
    (63) function -> . DEF VARIABLE ( SELF ) { statements }
    (64) runfunction -> . VARIABLE ( sentence )
    (65) class -> . CLASS VARIABLE { init statements }
    (67) runclass -> . VARIABLE = VARIABLE ( STR , NUMBER , NUMBER )
    (68) runclassfunction -> . VARIABLE . VARIABLE ( NUMBER )
    (69) runclassfunction -> . VARIABLE . VARIABLE ( )

    $end            reduce using rule 1 (program -> statements .)
    VARIABLE        shift and go to state 18
    SELF            shift and go to state 19
    PRINT           shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    BREAK           shift and go to state 24
    RETURN          shift and go to state 25
    DEF             shift and go to state 26
    CLASS           shift and go to state 27

    statement                      shift and go to state 28
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11
    return                         shift and go to state 12
    function                       shift and go to state 13
    runfunction                    shift and go to state 14
    class                          shift and go to state 15
    runclass                       shift and go to state 16
    runclassfunction               shift and go to state 17

state 3

    (3) statements -> statement .

    VARIABLE        reduce using rule 3 (statements -> statement .)
    SELF            reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    CLASS           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    }               reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    VARIABLE        reduce using rule 4 (statement -> assignment .)
    SELF            reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    CLASS           reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    }               reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> operation .

    VARIABLE        reduce using rule 5 (statement -> operation .)
    SELF            reduce using rule 5 (statement -> operation .)
    PRINT           reduce using rule 5 (statement -> operation .)
    IF              reduce using rule 5 (statement -> operation .)
    WHILE           reduce using rule 5 (statement -> operation .)
    FOR             reduce using rule 5 (statement -> operation .)
    BREAK           reduce using rule 5 (statement -> operation .)
    RETURN          reduce using rule 5 (statement -> operation .)
    DEF             reduce using rule 5 (statement -> operation .)
    CLASS           reduce using rule 5 (statement -> operation .)
    $end            reduce using rule 5 (statement -> operation .)
    }               reduce using rule 5 (statement -> operation .)


state 6

    (6) statement -> print .

    VARIABLE        reduce using rule 6 (statement -> print .)
    SELF            reduce using rule 6 (statement -> print .)
    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    RETURN          reduce using rule 6 (statement -> print .)
    DEF             reduce using rule 6 (statement -> print .)
    CLASS           reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    }               reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> modification .

    VARIABLE        reduce using rule 7 (statement -> modification .)
    SELF            reduce using rule 7 (statement -> modification .)
    PRINT           reduce using rule 7 (statement -> modification .)
    IF              reduce using rule 7 (statement -> modification .)
    WHILE           reduce using rule 7 (statement -> modification .)
    FOR             reduce using rule 7 (statement -> modification .)
    BREAK           reduce using rule 7 (statement -> modification .)
    RETURN          reduce using rule 7 (statement -> modification .)
    DEF             reduce using rule 7 (statement -> modification .)
    CLASS           reduce using rule 7 (statement -> modification .)
    $end            reduce using rule 7 (statement -> modification .)
    }               reduce using rule 7 (statement -> modification .)


state 8

    (8) statement -> iF .

    VARIABLE        reduce using rule 8 (statement -> iF .)
    SELF            reduce using rule 8 (statement -> iF .)
    PRINT           reduce using rule 8 (statement -> iF .)
    IF              reduce using rule 8 (statement -> iF .)
    WHILE           reduce using rule 8 (statement -> iF .)
    FOR             reduce using rule 8 (statement -> iF .)
    BREAK           reduce using rule 8 (statement -> iF .)
    RETURN          reduce using rule 8 (statement -> iF .)
    DEF             reduce using rule 8 (statement -> iF .)
    CLASS           reduce using rule 8 (statement -> iF .)
    $end            reduce using rule 8 (statement -> iF .)
    }               reduce using rule 8 (statement -> iF .)


state 9

    (9) statement -> whilE .

    VARIABLE        reduce using rule 9 (statement -> whilE .)
    SELF            reduce using rule 9 (statement -> whilE .)
    PRINT           reduce using rule 9 (statement -> whilE .)
    IF              reduce using rule 9 (statement -> whilE .)
    WHILE           reduce using rule 9 (statement -> whilE .)
    FOR             reduce using rule 9 (statement -> whilE .)
    BREAK           reduce using rule 9 (statement -> whilE .)
    RETURN          reduce using rule 9 (statement -> whilE .)
    DEF             reduce using rule 9 (statement -> whilE .)
    CLASS           reduce using rule 9 (statement -> whilE .)
    $end            reduce using rule 9 (statement -> whilE .)
    }               reduce using rule 9 (statement -> whilE .)


state 10

    (10) statement -> for .

    VARIABLE        reduce using rule 10 (statement -> for .)
    SELF            reduce using rule 10 (statement -> for .)
    PRINT           reduce using rule 10 (statement -> for .)
    IF              reduce using rule 10 (statement -> for .)
    WHILE           reduce using rule 10 (statement -> for .)
    FOR             reduce using rule 10 (statement -> for .)
    BREAK           reduce using rule 10 (statement -> for .)
    RETURN          reduce using rule 10 (statement -> for .)
    DEF             reduce using rule 10 (statement -> for .)
    CLASS           reduce using rule 10 (statement -> for .)
    $end            reduce using rule 10 (statement -> for .)
    }               reduce using rule 10 (statement -> for .)


state 11

    (11) statement -> break .

    VARIABLE        reduce using rule 11 (statement -> break .)
    SELF            reduce using rule 11 (statement -> break .)
    PRINT           reduce using rule 11 (statement -> break .)
    IF              reduce using rule 11 (statement -> break .)
    WHILE           reduce using rule 11 (statement -> break .)
    FOR             reduce using rule 11 (statement -> break .)
    BREAK           reduce using rule 11 (statement -> break .)
    RETURN          reduce using rule 11 (statement -> break .)
    DEF             reduce using rule 11 (statement -> break .)
    CLASS           reduce using rule 11 (statement -> break .)
    $end            reduce using rule 11 (statement -> break .)
    }               reduce using rule 11 (statement -> break .)


state 12

    (12) statement -> return .

    VARIABLE        reduce using rule 12 (statement -> return .)
    SELF            reduce using rule 12 (statement -> return .)
    PRINT           reduce using rule 12 (statement -> return .)
    IF              reduce using rule 12 (statement -> return .)
    WHILE           reduce using rule 12 (statement -> return .)
    FOR             reduce using rule 12 (statement -> return .)
    BREAK           reduce using rule 12 (statement -> return .)
    RETURN          reduce using rule 12 (statement -> return .)
    DEF             reduce using rule 12 (statement -> return .)
    CLASS           reduce using rule 12 (statement -> return .)
    $end            reduce using rule 12 (statement -> return .)
    }               reduce using rule 12 (statement -> return .)


state 13

    (13) statement -> function .

    VARIABLE        reduce using rule 13 (statement -> function .)
    SELF            reduce using rule 13 (statement -> function .)
    PRINT           reduce using rule 13 (statement -> function .)
    IF              reduce using rule 13 (statement -> function .)
    WHILE           reduce using rule 13 (statement -> function .)
    FOR             reduce using rule 13 (statement -> function .)
    BREAK           reduce using rule 13 (statement -> function .)
    RETURN          reduce using rule 13 (statement -> function .)
    DEF             reduce using rule 13 (statement -> function .)
    CLASS           reduce using rule 13 (statement -> function .)
    $end            reduce using rule 13 (statement -> function .)
    }               reduce using rule 13 (statement -> function .)


state 14

    (14) statement -> runfunction .

    VARIABLE        reduce using rule 14 (statement -> runfunction .)
    SELF            reduce using rule 14 (statement -> runfunction .)
    PRINT           reduce using rule 14 (statement -> runfunction .)
    IF              reduce using rule 14 (statement -> runfunction .)
    WHILE           reduce using rule 14 (statement -> runfunction .)
    FOR             reduce using rule 14 (statement -> runfunction .)
    BREAK           reduce using rule 14 (statement -> runfunction .)
    RETURN          reduce using rule 14 (statement -> runfunction .)
    DEF             reduce using rule 14 (statement -> runfunction .)
    CLASS           reduce using rule 14 (statement -> runfunction .)
    $end            reduce using rule 14 (statement -> runfunction .)
    }               reduce using rule 14 (statement -> runfunction .)


state 15

    (15) statement -> class .

    VARIABLE        reduce using rule 15 (statement -> class .)
    SELF            reduce using rule 15 (statement -> class .)
    PRINT           reduce using rule 15 (statement -> class .)
    IF              reduce using rule 15 (statement -> class .)
    WHILE           reduce using rule 15 (statement -> class .)
    FOR             reduce using rule 15 (statement -> class .)
    BREAK           reduce using rule 15 (statement -> class .)
    RETURN          reduce using rule 15 (statement -> class .)
    DEF             reduce using rule 15 (statement -> class .)
    CLASS           reduce using rule 15 (statement -> class .)
    $end            reduce using rule 15 (statement -> class .)
    }               reduce using rule 15 (statement -> class .)


state 16

    (16) statement -> runclass .

    VARIABLE        reduce using rule 16 (statement -> runclass .)
    SELF            reduce using rule 16 (statement -> runclass .)
    PRINT           reduce using rule 16 (statement -> runclass .)
    IF              reduce using rule 16 (statement -> runclass .)
    WHILE           reduce using rule 16 (statement -> runclass .)
    FOR             reduce using rule 16 (statement -> runclass .)
    BREAK           reduce using rule 16 (statement -> runclass .)
    RETURN          reduce using rule 16 (statement -> runclass .)
    DEF             reduce using rule 16 (statement -> runclass .)
    CLASS           reduce using rule 16 (statement -> runclass .)
    $end            reduce using rule 16 (statement -> runclass .)
    }               reduce using rule 16 (statement -> runclass .)


state 17

    (17) statement -> runclassfunction .

    VARIABLE        reduce using rule 17 (statement -> runclassfunction .)
    SELF            reduce using rule 17 (statement -> runclassfunction .)
    PRINT           reduce using rule 17 (statement -> runclassfunction .)
    IF              reduce using rule 17 (statement -> runclassfunction .)
    WHILE           reduce using rule 17 (statement -> runclassfunction .)
    FOR             reduce using rule 17 (statement -> runclassfunction .)
    BREAK           reduce using rule 17 (statement -> runclassfunction .)
    RETURN          reduce using rule 17 (statement -> runclassfunction .)
    DEF             reduce using rule 17 (statement -> runclassfunction .)
    CLASS           reduce using rule 17 (statement -> runclassfunction .)
    $end            reduce using rule 17 (statement -> runclassfunction .)
    }               reduce using rule 17 (statement -> runclassfunction .)


state 18
